[gd_scene load_steps=6 format=3 uid="uid://cop4ke0na0tox"]

[ext_resource type="Script" path="res://board.gd" id="1_tlwve"]
[ext_resource type="PackedScene" uid="uid://dy5r07q1xi8h1" path="res://marble.tscn" id="2_4kush"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhnmx"]
size = Vector2(39, 165)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8khu"]
size = Vector2(39, 163)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulxvp"]
size = Vector2(42, 40)

[node name="Board" type="Sprite2D"]
script = ExtResource("1_tlwve")
marblePrefab = ExtResource("2_4kush")

[node name="Temp" type="ColorRect" parent="."]
offset_right = 497.0
offset_bottom = 209.0
color = Color(0.494118, 0.494118, 0.494118, 1)

[node name="Temp2" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 10.0
offset_top = 19.0
offset_right = 49.0
offset_bottom = 185.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp3" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 74.0
offset_top = 129.0
offset_right = 113.0
offset_bottom = 165.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp4" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 137.0
offset_top = 128.0
offset_right = 176.0
offset_bottom = 164.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp5" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 268.0
offset_top = 131.0
offset_right = 307.0
offset_bottom = 167.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp6" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 264.0
offset_top = 24.0
offset_right = 303.0
offset_bottom = 60.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp7" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 384.0
offset_top = 26.0
offset_right = 423.0
offset_bottom = 62.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp8" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 72.0
offset_top = 21.0
offset_right = 111.0
offset_bottom = 57.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp9" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 441.0
offset_top = 21.0
offset_right = 480.0
offset_bottom = 185.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp10" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 203.0
offset_top = 130.0
offset_right = 242.0
offset_bottom = 166.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp11" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 328.0
offset_top = 132.0
offset_right = 367.0
offset_bottom = 168.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp12" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 386.0
offset_top = 132.0
offset_right = 425.0
offset_bottom = 168.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp13" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 198.0
offset_top = 24.0
offset_right = 237.0
offset_bottom = 60.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp14" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 134.0
offset_top = 22.0
offset_right = 173.0
offset_bottom = 58.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Temp15" type="ColorRect" parent="Temp"]
layout_mode = 0
offset_left = 329.0
offset_top = 25.0
offset_right = 368.0
offset_bottom = 61.0
color = Color(0.231373, 0.513726, 0.756863, 1)

[node name="Top_Home" type="CollisionShape2D" parent="."]
position = Vector2(29.5, 101.5)
shape = SubResource("RectangleShape2D_lhnmx")

[node name="Bottom_Home" type="CollisionShape2D" parent="."]
position = Vector2(460.5, 102.5)
shape = SubResource("RectangleShape2D_u8khu")

[node name="Spawning_Area" type="Area2D" parent="."]

[node name="Cell_0_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(91, 38)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_2_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(218, 42)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_3_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(284, 42)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_4_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(348, 43)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_5_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(403, 44)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_1_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(156, 146)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_2_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(222, 148)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_3_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(288, 149)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_4_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(348, 150)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_5_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(406, 150.25)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_1_0" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(153, 40)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_0_1" type="CollisionShape2D" parent="Spawning_Area"]
position = Vector2(94, 147)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_0_0" type="Area2D" parent="."]

[node name="Cell_0_0" type="CollisionShape2D" parent="Cell_0_0"]
position = Vector2(91, 39)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_0_1" type="Area2D" parent="."]

[node name="Cell_0_1" type="CollisionShape2D" parent="Cell_0_1"]
position = Vector2(94, 147)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_1_0" type="Area2D" parent="."]

[node name="Cell_1_0" type="CollisionShape2D" parent="Cell_1_0"]
position = Vector2(153, 40)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_1_1" type="Area2D" parent="."]

[node name="Cell_1_1" type="CollisionShape2D" parent="Cell_1_1"]
position = Vector2(156, 146)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_2_0" type="Area2D" parent="."]

[node name="Cell_2_0" type="CollisionShape2D" parent="Cell_2_0"]
position = Vector2(218, 42)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_2_1" type="Area2D" parent="."]

[node name="Cell_2_1" type="CollisionShape2D" parent="Cell_2_1"]
position = Vector2(222, 148)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_3_0" type="Area2D" parent="."]

[node name="Cell_3_0" type="CollisionShape2D" parent="Cell_3_0"]
position = Vector2(284, 42)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_3_1" type="Area2D" parent="."]

[node name="Cell_3_1" type="CollisionShape2D" parent="Cell_3_1"]
position = Vector2(288, 149)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_4_0" type="Area2D" parent="."]

[node name="Cell_4_0" type="CollisionShape2D" parent="Cell_4_0"]
position = Vector2(348, 43)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_4_1" type="Area2D" parent="."]

[node name="Cell_4_1" type="CollisionShape2D" parent="Cell_4_1"]
position = Vector2(348, 150)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_5_0" type="Area2D" parent="."]

[node name="Cell_5_0" type="CollisionShape2D" parent="Cell_5_0"]
position = Vector2(403, 44)
shape = SubResource("RectangleShape2D_ulxvp")

[node name="Cell_5_1" type="Area2D" parent="."]

[node name="Cell_5_1" type="CollisionShape2D" parent="Cell_5_1"]
position = Vector2(406, 150.25)
shape = SubResource("RectangleShape2D_ulxvp")
